fix fonts and spacing according to the design

--- a/components/bootstrap/_variables.scss
+++ b/components/bootstrap/_variables.scss
@@ -57,6 +57,8 @@ $grid-gutter-width: 32px;
 //
 // Font, line-height, and color for body text, headings, and more.
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500');
+
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:
   Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -64,10 +66,37 @@ $font-family-sans-serif:
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 // stylelint-enable value-keyword-case
 
-$font-size-base:              1rem;
+$font-size-base:              1rem; // browser default, typically 16px
+$font-size-lg:                ($font-size-base * 1.125); // 18px
+$font-size-sm:                ($font-size-base * .875); // 14px
 
-$blockquote-font-size:        $font-size-base;
+$font-weight-light:           300;
+$font-weight-normal:          400;
+$font-weight-bold:            500;
+
+$font-weight-base:            $font-weight-normal;
+$line-height-base:            1.5;
+
+$h1-font-size:                $font-size-base * 3.75;
+$h2-font-size:                $font-size-base * 3;
+$h3-font-size:                $font-size-base * 2.125;
+$h4-font-size:                $font-size-base * 1.75;
+
+$headings-margin-bottom:      $spacer;
+$headings-font-weight:        $font-weight-bold;
+$headings-line-height:        1.2;
+
+$lead-font-size:              ($font-size-base * 1.5);
+$lead-font-weight:            $font-weight-normal;
+
+$small-font-size:             80%;
+
+
+$blockquote-font-size:        $font-size-base * 1.125;
 $blockquote-padding-left:     3.5 * $font-size-base;
+
+$mark-padding:                .2em;
+$mark-bg:                     $green;
 
 
 // Page
