--- a/components/content/content.scss
+++ b/components/content/content.scss
@@ -1,10 +1,24 @@
 @import "../bootstrap/core";
 
-$article-padding-y: 6 * $spacer;
-$section-padding-y: 4 * $spacer;
+$article-padding-y: 8 * $spacer;
+$section-padding-y: 3 * $spacer;
 $section-sm-padding-y: 2 * $spacer;
 
 .content {
+  h2,
+  .h2 {
+    margin-top: 2 * $section-padding-y;
+  }
+
+  h3,
+  .h3 {
+    margin-top: 2 * $section-sm-padding-y;
+  }
+
+  h4,
+  .h4 {
+    margin-top: 2 * $spacer;
+  }
 }
 
 .section {
