--- a/components/key-feature/key-feature.scss
+++ b/components/key-feature/key-feature.scss
@@ -3,6 +3,7 @@
 .key-feature {
   display: block;
   margin: 0 0 $spacer;
+  font-size: $font-size-lg;
   text-align: center;
 }
 
